Small fix ( layout issue ) (cherry picked from commit 9118d19) (cherry picked from commit 552f4ff)

--- a/gui/themes/default/assets/css/red.css
+++ b/gui/themes/default/assets/css/red.css
@@ -185,7 +185,7 @@ input[type="password"]:disabled:focus,
 select:disabled:focus,
 textarea[readonly]:focus,
 textarea:disabled:focus,
-.disabled {
+.disabled:focus {
     border-color: #cccccc;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
